# StormLab

./: .gitignore  Readme.md  environment-notebooks.yml  environment.yml  pyproject.toml  requirements.txt
docs/: pipeline_integration.md
examples_pipeline/: 01_tracking_demo.ipynb  02_distribution_fitting_demo.ipynb  03_noise_generation_demo.ipynb  04_rainfall_simulation_demo.ipynb  05_end_to_end_demo.ipynb  README.md
src/: noise_generation.py  simulation.py
src/stormlab/: __init__.py  config.py  fitting.py  noise.py  simulation.py  tracking.py  validation.py
tests/: test_notebooks.py  test_smoke.py
